# radiosondeDB

./: .gitignore  README.md  config.example.toml  pyproject.toml
assets/dashboard/: style.css
assets/map/: style.css
deploy/: rsdb-archiver.service  rsdb-dashboard.service  rsdb-map.service
src/archiver/: database.py  main.py  tracking.py
src/dashboard/: dashboard.py  database.py  graphs.py  main.py
src/map/: color.py  database.py  launchsites.py  main.py  map.py
src/rsdb/: __init__.py  config.py  database.py  logging.py  packet.py  web.py
